Stop text from wrapping on line

--- a/client/src/components/PopOutMenu/PopOutMenu.module.scss
+++ b/client/src/components/PopOutMenu/PopOutMenu.module.scss
@@ -24,6 +24,7 @@
   padding: 0.25rem 1rem;
   transition: all 0.2s ease-in-out;
   font-weight: 300;
+  white-space: nowrap;
 }
 
 .popout-button > :nth-child(2) {
